Dark mode disabled button fix

--- a/src/routes/_app.scss
+++ b/src/routes/_app.scss
@@ -110,11 +110,11 @@ a {
   }
 
   .mdc-button:disabled {
-      color: hsla(0,0%,100%,.37);
+      color: hsla(0,0%,100%,.37) !important;
   }
 
   .mdc-button--outlined:disabled {
-    border-color: hsla(0,0%,100%,.37);
+    border-color: hsla(0,0%,100%,.37) !important;
   }
 
   .mdc-card {
